# wallet_platform

./: .gitignore  Dockerfile  README.md  _env  docker-compose.yml  pyproject.toml  requirements.txt
wallet_service/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  local.env  pyproject.toml
wallet_service/src/wallet_service/: __init__.py  __main__.py  config.py  ioc.py
wallet_service/src/wallet_service/application/: unit_of_work.py
wallet_service/src/wallet_service/application/commands/apply_wallet_operation/: __init__.py  dto.py  gateway.py  interactor.py
wallet_service/src/wallet_service/application/commands/outbox_processor/: __init__.py  dto.py  (+2 more)
wallet_service/src/wallet_service/application/outbox/: __init__.py  gateway.py  unit_of_work.py
wallet_service/src/wallet_service/domain/: __init__.py  exceptions.py  outbox.py
wallet_service/src/wallet_service/infrastructure/: logging.py  outbox_publisher.py
wallet_service/src/wallet_service/infrastructure/faststream/: __init__.py  publisher.py
wallet_service/src/wallet_service/infrastructure/sa/: __init__.py  mappers.py  migrations.py  models.py  session.py  unit_of_work.py
wallet_service/src/wallet_service/presentation/: outbox_scheduler.py
wallet_service/src/wallet_service/presentation/api/: __init__.py  exception_handlers.py  schemas.py
wallet_service/tests/: conftest.py  test_concurrency.py  test_faststream_publisher.py  test_outbox_domain.py  test_outbox_flow.py  test_outbox_processor.py  test_outbox_repository.py  test_repository.py  test_routes.py  test_services.py
(+37 files in other folders)
