[project]
name = "wallet-service"
version = "0.1.0"
description = "Wallet service built with FastAPI and PostgreSQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.6.0",
    "fastapi==0.118.0",
    "uvicorn==0.37.0",
    "pydantic==2.11.9",
    "sqlalchemy[asyncio]==2.0.43",
    "asyncpg==0.30.0",
    "alembic==1.16.5",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "httpx>=0.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.0",
    "testcontainers[postgres]>=4.8.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.mypy]
python_version = "3.12"
files = ["src/wallet_service"]
exclude = ["tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
pretty = true
ignore_missing_imports = true
